--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 	"repository": "https://github.com/shinken-monitoring/pack-mysql",
 	"keywords": [
 	  "pack",
+	  "database",
+	  "mysql"
 	  
 	],
 	"dependencies": {
