--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
 	  {
 		"name": "Imrane Dessai",
 		"email": "dessai.imrane@gmail.com"
-	  } 
+	  },
+          {
+                "name": "Olivier Hanesse",
+                "email": "olivier.hanesse@gmail.com"
+          }
 	],
 	"repository": "https://github.com/shinken-monitoring/pack-mysql",
 	"keywords": [
