Fix thread cache hit rate default warn/crit values.
Regarding this article hit rate should be as close to 100% as possible.
http://www.epigroove.com/blog/optimize-mysql-the-thread-cache

--- a/pack/templates.cfg
+++ b/pack/templates.cfg
@@ -42,8 +42,8 @@ define host{
    _LONGRUNNINGPROCS_CRIT    20
    _OPENFILES_WARN           80
    _OPENFILES_CRIT           95
-   _THREADCACHE_WARN         10
-   _THREADCACHE_CRIT         20
+   _THREADCACHEHITRATE_WARN         99:
+   _THREADCACHEHITRATE_CRIT         95:
 }
 
 define host{
