--- a/pack/commands.cfg
+++ b/pack/commands.cfg
@@ -114,6 +114,6 @@ define command {
 
 define command {
        command_name     check_mysql_threadcache_hitrate
-       command_line     $PLUGINSDIR$/check_mysql_health --hostname $HOSTADDRESS$ --username $_HOSTMYSQLUSER$ --password $_HOSTMYSQLPASSWORD$ --mode threadcache-hitrate --warning $_HOSTTHREADCACHE_WARN$ --critical $_HOSTTHREADCACHE_CRIT$
+       command_line     $PLUGINSDIR$/check_mysql_health --hostname $HOSTADDRESS$ --username $_HOSTMYSQLUSER$ --password $_HOSTMYSQLPASSWORD$ --mode threadcache-hitrate --warning $_HOSTTHREADCACHEHITRATE_WARN$ --critical $_HOSTTHREADCACHEHITRATE_CRIT$
 }
 
