Add: Factorization of mysql host

--- a/pack/templates.cfg
+++ b/pack/templates.cfg
@@ -1,11 +1,17 @@
 # DATABASES HOSTS
 define host{
-   name           mysql
+   name           generic-mysql
    use            generic-host
    register       0
 
    _MYSQLUSER                $MYSQLUSER$
    _MYSQLPASSWORD            $MYSQLPASSWORD$
+}
+
+define host{
+   name           mysql
+   use            generic-mysql
+   register       0
 
    # The plugin need a ":" sign when perfdata should be greater than the thresholds.
    _UPTIME_WARN		      10:
@@ -48,7 +54,7 @@ define host{
 
 define host{
    name           mysql-slave
-   use            generic-host
+   use            generic-mysql
    register       0
    _SLAVELAG_WARN 10
    _SLAVELAG_CRIT 20
