Add: mysql-cluster hosts type

--- a/pack/templates.cfg
+++ b/pack/templates.cfg
@@ -60,7 +60,11 @@ define host{
    _SLAVELAG_CRIT 20
 }
 
-
+define host{
+   name           mysql-cluster
+   use            generic-mysql
+   register       0
+}
 
 define service{
   name				mysql-service
