--- a/pack/services/cluster_ndb_running.cfg
+++ b/pack/services/cluster_ndb_running.cfg
@@ -2,6 +2,6 @@ define service{
    service_description           Mysql-cluster-ndbd-running
    use            mysql-service
    register       0
-   host_name	  mysql
+   host_name	    mysql-cluster
    check_command  check_mysql_cluster_ndbd_running
 }
