--- a/pack/discovery.cfg
+++ b/pack/discovery.cfg
@@ -4,3 +4,10 @@ define discoveryrule {
        openports                ^3306$
        +use                     mysql
 }
+
+define discoveryrule {
+       discoveryrule_name       Mysql-Cluster
+       creation_type            host
+       openports                ^1186$
+       +use                     mysql-cluster
+}
