Added dependencies to Mysql-connection

--- a/pack/services/qcache_hitrate.cfg
+++ b/pack/services/qcache_hitrate.cfg
@@ -4,5 +4,6 @@ define service{
    register       0
    host_name	  mysql
    check_command  check_mysql_qcache_hitrate
+   service_dependencies  ,Mysql-connection
    aggregation	  mysql/cachehit
 }
