--- a/pack/services/slow_queries.cfg
+++ b/pack/services/slow_queries.cfg
@@ -3,5 +3,6 @@ define service{
    use            mysql-service
    register       0
    host_name	  mysql
+   service_dependencies  ,Mysql-connection
    check_command  check_mysql_slow_queries
 }
