--- a/pack/services/index_usage.cfg
+++ b/pack/services/index_usage.cfg
@@ -4,4 +4,5 @@ define service{
    register       0
    host_name	  mysql
    check_command  check_mysql_index_usage
+   service_dependencies  ,Mysql-connection
 }
