--- a/pack/services/log_waits.cfg
+++ b/pack/services/log_waits.cfg
@@ -4,5 +4,6 @@ define service{
    register       0
    host_name	  mysql
    check_command  check_mysql_log_waits
+   service_dependencies  ,Mysql-connection
    aggregation		  /mysql/innodb
 }
