--- a/pack/services/long_running_procs.cfg
+++ b/pack/services/long_running_procs.cfg
@@ -4,4 +4,5 @@ define service{
    register       0
    host_name	  mysql
    check_command  check_mysql_long_running_procs
+   service_dependencies  ,Mysql-connection
 }
