--- a/pack/services/restart.cfg
+++ b/pack/services/restart.cfg
@@ -4,4 +4,5 @@ define service{
    register       0
    host_name	  mysql
    check_command  check_mysql_uptime
+   service_dependencies  ,Mysql-connection
 }
