--- a/pack/services/table_lock_contention.cfg
+++ b/pack/services/table_lock_contention.cfg
@@ -4,4 +4,5 @@ define service{
    register       0
    host_name	  mysql
    check_command  check_mysql_table_lock_contention
+   service_dependencies  ,Mysql-connection
 }
