--- a/pack/services/tmp_disk_tables.cfg
+++ b/pack/services/tmp_disk_tables.cfg
@@ -4,4 +4,5 @@ define service{
    register       0
    host_name	  mysql
    check_command  check_mysql_tmp_disk_tables
+   service_dependencies  ,Mysql-connection
 }
